Import of DAVIDO/Bytes-Random-Secure-0.02 from CPAN.
gitpan-cpan-distribution: Bytes-Random-Secure
gitpan-cpan-version:      0.02
gitpan-cpan-path:         DAVIDO/Bytes-Random-Secure-0.02.tar.gz
gitpan-cpan-author:       DAVIDO
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Bytes::Random::Secure
 
-Generate strings of cryptographic-quality pseudo-random bytes as 
+Generate strings of cryptographic-quality pseudo-random bytes as a string of
 raw bytes, hex digits, MIME Base64, or MIME QuotedPrintable.
 
 INSTALLATION
