Import of DAVIDO/Bytes-Random-Secure-0.11 from CPAN.
gitpan-cpan-distribution: Bytes-Random-Secure
gitpan-cpan-version:      0.11
gitpan-cpan-path:         DAVIDO/Bytes-Random-Secure-0.11.tar.gz
gitpan-cpan-author:       DAVIDO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Bytes::Random::Secure
 
+0.10 2012-12-05
+  - Fixed a few issues where v0.10 broke compatibility with Perls older than
+    v5.10. (Removed // operator.)
+  - POD improvements.
+  - Added a few entries in MANIFEST.SKIP.
+  
 0.10 2012-12-04
   - Better handling of random_bytes() (no parameter passed): Now defaults to
     zero bytes explicitly, so we don't get "uninitialized values" warnings.
