--- a/Changes
+++ b/Changes
@@ -1,6 +1,12 @@
 Revision history for Bytes::Random::Secure
 
-0.10 2012-12-05
+0.12 2012-12-09
+  - Applied rewrite of random_bytes() from Dana Jacobsen, that improves
+    performance while at the same time making better use of the 32 bit random
+    value returned by ISAAC.
+  - POD fixes/tweaks.
+
+0.11 2012-12-05
   - Fixed a few issues where v0.10 broke compatibility with Perls older than
     v5.10. (Removed // operator.)
   - POD improvements.
