Import of DAVIDO/Bytes-Random-Secure-0.22 from CPAN.
gitpan-cpan-distribution: Bytes-Random-Secure
gitpan-cpan-version:      0.22
gitpan-cpan-path:         DAVIDO/Bytes-Random-Secure-0.22.tar.gz
gitpan-cpan-author:       DAVIDO
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -20,6 +20,11 @@ To install this module, run the following commands:
     make test
     make install
 
+Or preferably, let your favorite CPAN installer do the work for you.  Users
+are encouraged to use a fairly modern version of their CPAN installer, 
+particularly if building this distribution on Perl versions that
+preceed Perl 5.8.9.
+
 SUPPORT AND DOCUMENTATION
 
 After installing, you can find documentation for this module with the
