--- a/Changes
+++ b/Changes
@@ -1,5 +1,19 @@
 Revision history for Bytes::Random::Secure
 
+0.23 2012-02-11
+  - Clarified the (small) magnitude of the performance issues surrounding
+    random_string_from() (MODULO BIAS section of POD). (DANAJ's suggestion.)
+  - Added a test for _closest_divisor().
+  - Added a POD section discussing ISAAC's strengths.
+  - Increased SEED_MAX bits from 512 (arbitrary) to 8192 (theoretical
+    max for ISAAC).  Added explanation to POD, and adjusted tests.
+  - Minor corrections in # code comments (accuracy).
+  - Added irand() object method per Dana Jacobsen's request and
+    code contribution.
+  - POD and tests for irand().
+  - Test::Warn is now an optional dependency.  By ensuring that Test::Warn is
+    installed, the module has 100% test coverage (per Devel::Cover).
+
 0.22 2013-01-29
   - Implement suggestions from Dana Jacobsen (Unicode tests, specify minimum 
     versions for dependencies, document installation on older Perls).
