Import of DAVIDO/Bytes-Random-Secure-0.24 from CPAN.
gitpan-cpan-distribution: Bytes-Random-Secure
gitpan-cpan-version:      0.24
gitpan-cpan-path:         DAVIDO/Bytes-Random-Secure-0.24.tar.gz
gitpan-cpan-author:       DAVIDO
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Bytes::Random::Secure
 
 Generate strings of cryptographic-quality pseudo-random bytes as a string of
-raw bytes, hex digits, MIME Base64, or MIME QuotedPrintable.
+raw bytes, hex digits, MIME Base64, MIME QuotedPrintable, or just long ints.
 
 
 CONFIGURATION
