--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Bytes::Random::Secure
 
+0.26 2012-06-22
+  - Improved a test comment in t/27....t.  Removed a comment paragraph that
+    isn't relevant now that the timing has been removed.
+  - POD edits.
+  - POD spelling corrections (closes RT#86326).
+  - Add "FORK AND THREAD SAFETY section to CAVIATS.
+
 0.25 2012-02-23
   - Removed the speed test / fall-back from t/27-fips140-1.t; it's unnecessary,
     and could cause divide by zero errors on really fast systems.
